# hash-near-collisions

./: CMakeLists.txt  README.md  bitutils.c  bitutils.h  collision.c  collision.h  main.c
src/: CMakeLists.txt  bitutils.c  bitutils.h  brents.c  brents.h  collision.c  collision.h  configuration.h  distinguished_points.c  distinguished_points.h  dp_hash_table.c  dp_hash_table.h  hamming_code.c  hamming_code.h  hash_function.c  hash_function.h  main.c
src/md5/: CMakeLists.txt
